Fix a couple of spacing issues in small breakpoint

--- a/source/stylesheets/_global.css.scss
+++ b/source/stylesheets/_global.css.scss
@@ -32,6 +32,11 @@ body {
 %-padded {
   padding: 40px 0 0 0;
   margin-bottom: 40px;
+
+  @media (max-width: $break_medium) {
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
 }
 
 %-thick-bottom-border {
