--- a/source/stylesheets/modules/_m-intro.css.scss
+++ b/source/stylesheets/modules/_m-intro.css.scss
@@ -28,6 +28,5 @@ $m : '.m-intro';
 
   @media (max-width: $break_medium) {
     max-width: $column_width * 4;
-    padding: 20px;
   }
 }
