--- a/source/stylesheets/modules/_m-person.css.scss
+++ b/source/stylesheets/modules/_m-person.css.scss
@@ -46,7 +46,7 @@ $m : '.m-person';
       float: none;
       margin-bottom: -80px;
       width: 100%;
-      height: auto;
+      height: 300px;
     }
   }
 }
